--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,7 +8,6 @@
   align-items: center;
   width: 100vw;
   height: 100rem;
-  margin: 10rem;
 }
 
 .container-books {
@@ -59,6 +58,7 @@
 }
 
 .container-detail {
+  box-sizing: border-box;
   text-align: justify;
   font-size: 16rem;
 }
@@ -102,7 +102,8 @@
 }
 
 .resume-article {
-  background-color: white;
   font-size: 18rem;
+  background-color: white;
   padding: 20rem;
+  height: 100vh;
 }
